Small notebook improvements

--- a/EndoNet.ipynb
+++ b/EndoNet.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d87442e3",
+   "id": "f3c099eb",
    "metadata": {},
    "source": [
     "# 1. High Level Implementation Architecture"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2682528b",
+   "id": "fcfee90e",
    "metadata": {},
    "source": [
     "<img src=\"images/HighLevelArchitecture.png\" alt=\"High Level Architecture Implementation Architecture\" class=\"bg-primary\" width=\"1000px\">\n",
@@ -2911,7 +2911,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "f27c9646",
+   "id": "b814115c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4124,7 +4124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43d3210e",
+   "id": "61c0e45a",
    "metadata": {},
    "source": [
     "Testing prediction:"
@@ -4133,7 +4133,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "33711618",
+   "id": "a845db34",
    "metadata": {},
    "outputs": [
     {
@@ -4252,7 +4252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54b65c85",
+   "id": "6b530676",
    "metadata": {},
    "source": [
     "Testing probability predictions:"
@@ -4261,7 +4261,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "adb38409",
+   "id": "b068f34e",
    "metadata": {},
    "outputs": [
     {
@@ -4380,7 +4380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2942a2a2",
+   "id": "78905769",
    "metadata": {},
    "source": [
     "# HMM | WIP"
@@ -4389,7 +4389,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "cd2e9a47",
+   "id": "e4e85d56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4399,7 +4399,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "60d10138",
+   "id": "dade79d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4453,7 +4453,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "06c3e447",
+   "id": "7bab07e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4463,7 +4463,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "e601335a",
+   "id": "48a68ff5",
    "metadata": {},
    "outputs": [
     {
@@ -4595,7 +4595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca818e67",
+   "id": "a0b62154",
    "metadata": {},
    "source": [
     "## 8.4 Incorporate temporal dimension into network features"
@@ -4603,7 +4603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a824f1b2",
+   "id": "3e219c30",
    "metadata": {},
    "source": [
     "# TODOs"
@@ -4611,7 +4611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "047fb4c0",
+   "id": "9c93f0dd",
    "metadata": {},
    "source": [
     "* Inception\n",
@@ -4619,7 +4619,8 @@
     "* Tensorboard\n",
     "    * Kernel Images\n",
     "    * Graph\n",
-    "* HMM Implementation"
+    "* HMM Implementation\n",
+    "* Weight Sampling"
    ]
   },
   {
